Small fixes on password, Encryption,fill the requirement of : Input validation(eg. Password must contain at least 1 number, 1 special character…) and Hashing(password, or sensitive data)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="hint_confirm_password">Konfirmo fjalkalimin</string>
     <string name="submit_change">Ndrysho Profilin</string>
     <string name="app_name">UniConnect</string>
+    <string-array name="gender_options">
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
+
 </resources>
